# eta-estimator

./: Makefile  README.md  cleanup_data.py  create_estimators.py  create_trades.py  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
data_creation_assets/: trades_info.csv
estimator/: admin.py  apps.py  ml_predictor.py  models.py  serializers.py  urls.py  views.py
estimator/migrations/: 0001_initial.py  0002_alter_estimator_trade.py  0002_alter_trade_name.py  0003_resourcegroup.py
eta_estimator/: asgi.py  settings.py  urls.py  wsgi.py
ml_assets/: README.md  columns.pkl  model_epoch25_valmae0.0005.keras  workable_sheets_count_scaler.pkl  y_scaler.pkl
